--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ navbar-col: "#FFB6C1"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
-text-col: "#EAEAEA"
+text-col: "#000000"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#FFB6C1"
