--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ feed_show_tags: true
 navbar-col: "#FFB6C1"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-page-col: "#404040"
+page-col: "#ffffff"
 text-col: "#000000"
 link-col: "#008AFF"
 hover-col: "#0085A1"
